Add page Termeni

--- a/soap-app/style.css
+++ b/soap-app/style.css
@@ -6,6 +6,7 @@ body {
     padding-top: 3rem;
     padding-bottom: 0.25rem;
     color: #0a0a0a;
+    background-color: rgb(245, 253, 238);
   }
   
   
